merit list page for coordinators

--- a/tnp/templates/coordinator_tabs.html
+++ b/tnp/templates/coordinator_tabs.html
@@ -3,11 +3,11 @@
 <div class="container">
 	<center>
 		<ul>
-			<a class="waves-effect btn grey lighten-5 grey-text text-darken-2 hoverable z-depth-2" href="/company/add">
+			<a class="waves-effect btn grey lighten-5 grey-text text-darken-2 hoverable z-depth-2" href="{% url 'add' %}">
 				<strong> Add Company </strong>
 			</a>
-			<a class="waves-effect btn grey lighten-5 grey-text text-darken-2 hoverable z-depth-2" href="#">
-				<strong> Companies I Added </strong>
+			<a class="waves-effect btn grey lighten-5 grey-text text-darken-2 hoverable z-depth-2" href="{% url 'merit_list' %}">
+				<strong> Merit List </strong>
 			</a>
 		</ul>
 	</center>
