mobile UI optimizations

--- a/tnp/templates/base.html
+++ b/tnp/templates/base.html
@@ -17,36 +17,37 @@
 
 
     <body id="main_body">
-        <nav class="grey lighten-5">
-          <div class="nav-wrapper container">
-            <a href="/" class="waves-effect brand-logo grey-text text-darken-2"> Training and Placement, SVNIT </a>
-            <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
-            
-            <ul id="nav-mobile" class="right hide-on-med-and-down">
-              {% if user.is_authenticated %}
-                  <li><a href="/consent/home" class="waves-effect grey-text text-darken-2">Welcome {{ user.first_name }}</a></li>
-                  <li><a class="waves-effect grey-text text-darken-2" href="{% url 'profile'%}">Profile</a></li>
-                  <li><a href="/consent/logout" class="waves-effect grey-text text-darken-2">Logout</a></li>
-              {% else %}
-                  <li><a href="#" class="waves-effect grey-text text-darken-2">Welcome</a></li>
-                  <li><a href="/consent/login" class="waves-effect grey-text text-darken-2">Login</a></li>
-              {% endif %}
-            </ul>
-            
-            <ul id="mobile-demo" class="side-nav">
-              {% if user.is_authenticated %}
-                  <li><a href="/consent/home" class="waves-effect grey-text text-darken-2">Home</a></li>
-                  <li><a class="waves-effect grey-text text-darken-2" href="{% url 'profile'%}">Profile</a></li>
-                  <li><a href="/consent/logout" class="waves-effect grey-text text-darken-2">Logout</a></li>
-              {% else %}
-                  <li><a href="#" class="waves-effect grey-text text-darken-2">Welcome</a></li>
-                  <li><a href="/consent/login" class="waves-effect grey-text text-darken-2">Login</a></li>
-              {% endif %}
-            </ul>
+        <div class="navbar-fixed">  
+          <nav class="grey lighten-5 z-depth-3">
+            <div class="nav-wrapper container">
+              <a href="/" class="waves-effect brand-logo grey-text text-darken-2"> Training and Placement, SVNIT </a>
+              <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
+              
+              <ul id="nav-mobile" class="right hide-on-med-and-down">
+                {% if user.is_authenticated %}
+                    <li><a href="/consent/home" class="waves-effect grey-text text-darken-2">Welcome {{ user.first_name }}</a></li>
+                    <li><a class="waves-effect grey-text text-darken-2" href="{% url 'profile'%}">Profile</a></li>
+                    <li><a href="/consent/logout" class="waves-effect grey-text text-darken-2">Logout</a></li>
+                {% else %}
+                    <li><a href="#" class="waves-effect grey-text text-darken-2">Welcome</a></li>
+                    <li><a href="/consent/login" class="waves-effect grey-text text-darken-2">Login</a></li>
+                {% endif %}
+              </ul>
+              
+              <ul id="mobile-demo" class="side-nav">
+                {% if user.is_authenticated %}
+                    <li><a href="/consent/home" class="waves-effect grey-text text-darken-2">Home</a></li>
+                    <li><a class="waves-effect grey-text text-darken-2" href="{% url 'profile'%}">Profile</a></li>
+                    <li><a href="/consent/logout" class="waves-effect grey-text text-darken-2">Logout</a></li>
+                {% else %}
+                    <li><a href="#" class="waves-effect grey-text text-darken-2">Welcome</a></li>
+                    <li><a href="/consent/login" class="waves-effect grey-text text-darken-2">Login</a></li>
+                {% endif %}
+              </ul>
 
-          </div>
-        </nav>
-            
+            </div>
+          </nav>
+        </div>
         {% load consent_extras %}
         {% if request.user|is_coordinator %}
             {% include 'coordinator_tabs.html' %}
@@ -60,8 +61,8 @@
           <div class="footer-copyright grey-text text-darken-2 grey lighten-3 z-depth-5" style="height: 50px">
             
             <div class="container">
-              <p class="grey-text text-darken-2"> <strong> © 2017 Copyright SVNIT </strong>
-                <a class="grey-text text-darken-2 right" href="{% url 'about' %}">  <strong> About </strong> </a>
+              <p class="grey-text text-darken-2"> © 2017 Copyright SVNIT
+                <a class="grey-text text-darken-2 right" href="{% url 'about' %}">  About </a>
               </p>
             </div>
             
