--- a/tnp/templates/consent/merit_list.html
+++ b/tnp/templates/consent/merit_list.html
@@ -18,7 +18,7 @@
                         <span class="card-title"> Merit List </span>
                     </div>
                     <div class="card-content">
-                        <table class="responsive-table striped centered horizontal-scroll">
+                        <table class="striped centered horizontal-scroll">
                             <thead>
                                 <tr>
                                     <th class="no-wrap"> Sr No </th>
