minor html changes

--- a/tnp/templates/consent/login_user.html
+++ b/tnp/templates/consent/login_user.html
@@ -9,7 +9,8 @@
 {% block body_block %} 
 
 <div id="content" class="" style="min-height: calc(100vh - 165px);">
-  <div class="valign-wrapper" style="width:100%;height:80%;position: absolute;">
+  <div class="section"> </div>
+  <div class="valign-wrapper">
     <div class="valign" style="width:100%;">
         <div class="container">
             
