--- a/tnp/templates/consent/merit_list.html
+++ b/tnp/templates/consent/merit_list.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
 
-{% block title %} {{ title }} {% endblock %}
+{% block title %} Merit List {% endblock %}
 
 {% block custom_css %}
   <link type="text/css" rel="stylesheet" href="/static/css/company/job.css" media="screen,projection" />
