--- a/tnp/templates/consent/merit_list.html
+++ b/tnp/templates/consent/merit_list.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
 
-{% block title %} Merit List {% endblock %}
+{% block title %} Merit List: {{branch}}, Batch of {{batch}} {% endblock %}
 
 {% block custom_css %}
   <link type="text/css" rel="stylesheet" href="/static/css/company/job.css" media="screen,projection" />
@@ -15,7 +15,7 @@
             <div class="col s12 m12">
                 <div class="card cgpa hoverable grey-text text-darken-2 grey lighten-5 z-depth-2">
                     <div class="card-content grey-text text-lighten-5 grey darken-2 z-depth-1">
-                        <span class="card-title"> Merit List </span>
+                        <span class="card-title"> Merit List: {{branch}}, Batch of {{batch}} </span>
                     </div>
                     <div class="card-content">
                         <table class="striped centered horizontal-scroll">
