--- a/tnp/templates/company/add.html
+++ b/tnp/templates/company/add.html
@@ -14,10 +14,11 @@
 
 <div id="content" style="min-height: calc(100vh - 120px);">
     <div class="container">
-        <div class="section"> </div>
+        <div id="form_errors">  </div>
+
         <div class="row">
             <h4> {{ company_form.non_field_errors }} </h4>
-            <form action="" method="post" enctype="multipart/form-data">
+            <form action="" id="add_company_form" method="post" enctype="multipart/form-data">
                 {% csrf_token %}
                 <div class="card grey lighten-5 grey-text text-darken-2 z-depth-2 hoverable">
                     <div class="card-content grey darken-2 grey-text text-lighten-5 z-depth-2">
@@ -264,7 +265,7 @@
 
                             <div class="input-field col s4 m4">
                                 {{ job_form.resumes_required }}
-                                <label for="{{ job_form.resumes_required.id_for_label }}"> 
+                                <label for="{{ job_form.resumes_required.id_for_label }}" class="teal-text text-darken-2"> 
                                     Resumes Required?
                                 </label>
                             </div>
