properly formatting of salary decimal and salary type (ctc/stipend)

--- a/tnp/templates/company/job.html
+++ b/tnp/templates/company/job.html
@@ -99,14 +99,14 @@
                       <div class="col s12 m12">
                         <div class="card short-wide hoverable grey-text text-darken-2 grey lighten-5 z-depth-2">
                             <div class="card-content activator">
-                              <span class="card-title"> CTC Details 
+                              <span class="card-title"> {{ salary_type }} Details
                                 <i class="material-icons right">expand_more</i>
                               </span>
                               <p class="truncate-main"> {{ ctc_details }} </p>
                             </div>
 
                             <div class="my-card-reveal grey-text text-darken-2 grey lighten-5">
-                              <span class="card-title"> CTC Details <i class="material-icons right">close</i></span>
+                              <span class="card-title"> {{ salary_type }} Details <i class="material-icons right">close</i></span>
                               <p>{{ ctc_details }}</p>
                             </div>
                         </div>
