--- a/tnp/templates/consent/home.html
+++ b/tnp/templates/consent/home.html
@@ -9,7 +9,7 @@
 
 {% block body_block %}
 
-<div id="content" style="min-height: calc(100vh - 120px);">
+<div id="content" style="min-height: calc(77vh);">
       <div class="container">
         {% if messages %}
           <div class="section" id="messages">
